--- a/fineuploader/fineuploader2.html
+++ b/fineuploader/fineuploader2.html
@@ -27,7 +27,7 @@
                         <div role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" class="qq-progress-bar-selector qq-progress-bar"></div>
                     </div>
                     <span class="qq-upload-spinner-selector qq-upload-spinner"></span>
-                    <img class="qq-thumbnail-selector" qq-max-size="100" qq-server-scale>
+                    <!-- <img class="qq-thumbnail-selector" qq-max-size="100" qq-server-scale> -->
                     <span class="qq-upload-file-selector qq-upload-file"></span>
                     <span class="qq-edit-filename-icon-selector qq-edit-filename-icon" aria-label="Edit filename"></span>
                     <input class="qq-edit-filename-selector qq-edit-filename" tabindex="0" type="text">
@@ -64,6 +64,11 @@
             </dialog>
         </div>
     </script>
+    <style>
+        span.qq-upload-file-selector.qq-upload-file {
+            cursor: pointer;
+        }
+    </style>
 
     <title>Fine Uploader Gallery UI</title>
 </head>
@@ -78,9 +83,20 @@
                 endpoint: "http://127.0.0.1:8080/file/fetch",
                 params: {PARAM1: "1111"},
             },
+            request: {
+                endpoint: 'http://127.0.0.1:8080/file/process',
+                inputName: "file",
+            },
             callbacks: {
                 onComplete: function(id, name, response, xhr) {
-                    console.log("onComplete id, name, response, xhr **** ", id, name, response, xhr);
+                    console.log("onComplete this, id, name, response, xhr **** ", this, id, name, response, xhr);
+
+                    this.setUuid(id, response.uid);
+                    const $selector = $(`li.qq-file-id-${id} span.qq-upload-file-selector`);
+                    $selector.data("uid", response.uid);
+                    $selector.on("click", () => {
+                        download(this, id);
+                    });
                 },
                 onCoonAllCompletemplete: function(succeeded, failed) {
                     console.log("onAllComplete succeeded, failed **** ", succeeded, failedr);
@@ -132,13 +148,18 @@
             // const file = uploader.getFile(id);
             // const uid = uploader.getUuid(id);
             const file = uploader.getUploads({id: id});
-            const $el = $(`ul.qq-upload-list-selector li.qq-file-id-${id}`);
-            const type = $("span.qq-upload-file-selector", $el).text();
+            let type;
+            if (file.file) {
+                type = file.file.type;
+            } else {
+                const $el = $(`ul.qq-upload-list-selector li.qq-file-id-${id}`);
+                type = $("span.qq-upload-file-type-selector", $el).text();
+            }
 
             const link = document.createElement("a");
             // 타입을 어떻게 저장할까............
             // link.href = `http://127.0.0.1:8080/file/download?uid=${file.uuid}&name=${file.name}&type=${file.type}`;
-            link.href = `http://127.0.0.1:8080/file/download?uid=${file.uuid}&name=${file.name}&type=${file.type}`;
+            link.href = `http://127.0.0.1:8080/file/download?uid=${file.uuid}&name=${file.name}&type=${type}`;
             link.download = file.name;
             document.body.appendChild(link);
             link.click();
